<resources>
    <string name="app_name">Gaming StoreUi</string>
    <string name="get_a_fantastic_n_gaming_experience">Get a <font color='#2FD32B'><b>Fantastic\n Gaming </b></font>Experience</string>
    <string name="line_bg">line_bg</string>
    <string name="intro_image">intro image</string>
    <string name="feel_the_experience_of_playing_games_n_with_your_friends_more_exiting">Feel the experience of playing games \n with your friends more exiting</string>
    <string name="get_started">Get Started</string>
    <string name="profile_image">profile Image</string>
    <string name="expert">Expert:</string>
    <string name="ahmed_ramadan">Ahmed Ramadan</string>
    <string name="search">Search . . .</string>
    <string name="card_icon">card icon</string>
    <string name="notification_icon">notification icon</string>
    <string name="tactical_shooter">Tactical Shooter</string>
    <string name="volerant_image">Volerant Image</string>
    <string name="agents_abilities_meet_tactical_gun_play_n_play_valorant_for_free_today">Agents\' abilities meet tactical Gun play. \nPlay VALORANT for Free Today.</string>
    <string name="read_more">Read More...</string>
    <string name="play_game">Play Game</string>
    <string name="official_version">Official Version</string>
    <string name="masterpiece">MASTERPIECE</string>
    <string name="apex_legends_is_a_free_to_play_n_hero_shooter_game_where_legendary">Apex Legends is a free-to-play \n hero shooter game where legendary.</string>
    <string name="popular_games">Popular Games</string>
    <string name="see_all">See All</string>
    <string name="breathing_village_more_than_just_a_mysterious_backdrop_for_nthe_horrifying_events_that_unfold_in_the_game">Breathing Village – More than just a mysterious backdrop for\nthe horrifying events that unfold in the game</string>
    <string name="action_adventure">Action Adventure</string>
    <string name="gta_v">GTA-V</string>
    <string name="free_to_play">Free To Play</string>
    <string name="grand_theft_auto_v_and_gta_online_n_now_upgraded_for_playstation_5_and_xbox">Grand Theft Auto V and GTA Online \n now upgraded for PlayStation 5 and Xbox</string>
    <string name="todo">TODO</string>
    <string name="dota_2_is_an_rts_styled_moba_type_ncompetitive_team_game_with_rpg_elements">Dota 2 is an RTS-styled MOBA-type \ncompetitive team game with RPG elements.</string>
    <string name="fantastic">Fantastic</string>
    <string name="genshin">Genshin</string>
    <string name="genshin_impact_is_an_open_world_action_rpg_in_the_game_set_forth_on_a_journey">Genshin Impact is an open-world action RPG. In the game, set forth on a journey</string>

</resources>