<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/get_a_fantastic_n_gaming_experience"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        android:fontFamily="@font/manrope_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/line_bg"
        android:src="@drawable/ic_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="270dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/intro_image"
        android:src="@drawable/game_night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="@string/feel_the_experience_of_playing_games_n_with_your_friends_more_exiting"
        android:textAlignment="center"
        android:textColor="@color/title_featured"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:clickable="true"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />



</androidx.constraintlayout.widget.ConstraintLayout>