<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/ic_john" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expert"
                android:textColor="@color/title_featured"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ahmed_ramadan"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/card_icon"
            android:src="@drawable/ic_cart" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:contentDescription="@string/notification_icon"
            android:src="@drawable/ic_notification" />

    </LinearLayout>

    <EditText
        android:id="@+id/search_edt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_search_edt"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_search"
        android:drawablePadding="15dp"
        android:hint="@string/search"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        android:inputType="textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLayout" />

    <HorizontalScrollView
        android:id="@+id/scrollHorizontalBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/card_bg"
                app:cardCornerRadius="10dp"
                android:clickable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/shoote_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tactical_shooter"
                        android:textSize="13sp"
                        android:textColor="@color/green"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:id="@+id/ic_logo_valorant"
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_valorant_logo"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="13dp"
                        app:layout_constraintTop_toBottomOf="@id/shoote_tx"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/desc_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agents_abilities_meet_tactical_gun_play_n_play_valorant_for_free_today"
                        android:textSize="10sp"
                        android:textColor="@color/gray"
                        android:textStyle="normal"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/ic_logo_valorant"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/readMore_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_more"
                        android:textSize="11sp"
                        android:textColor="@color/green_off"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/desc_tx"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <Button
                        android:id="@+id/playGame_btn"
                        android:layout_width="90dp"
                        android:layout_height="35dp"
                        android:text="@string/play_game"
                        android:textSize="8sp"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textStyle="normal"
                        android:backgroundTint="@color/green"
                        android:clickable="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/readMore_tx"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_light"
                        android:contentDescription="@string/volerant_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="160dp"
                        android:src="@drawable/ic_valorant"
                        android:layout_marginEnd="15dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/volerant_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>




                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/card_bg"
                app:cardCornerRadius="10dp"
                android:clickable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/shoote_tx1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masterpiece"
                        android:textSize="13sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:id="@+id/ic_logo_dota"
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_dota_logo"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="13dp"
                        app:layout_constraintTop_toBottomOf="@id/shoote_tx1"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/dota_desc_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dota 2 is an RTS-styled MOBA-type \ncompetitive team game with RPG elements."
                        android:textSize="10sp"
                        android:textColor="@color/gray"
                        android:textStyle="normal"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/ic_logo_dota"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/dota_readMore_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_more"
                        android:textSize="11sp"
                        android:textColor="@color/green_off"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/dota_desc_tx"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <Button
                        android:id="@+id/dota_playGame_btn"
                        android:layout_width="90dp"
                        android:layout_height="35dp"
                        android:text="@string/play_game"
                        android:textSize="8sp"
                        android:textColor="@color/green"
                        android:textAllCaps="false"
                        android:textStyle="normal"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/dota_readMore_tx"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_light"
                        android:contentDescription="@string/volerant_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="160dp"
                        android:src="@drawable/ic_dota"
                        android:layout_marginEnd="15dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/volerant_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>




                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/card_bg"
                app:cardCornerRadius="10dp"
                android:clickable="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/apex_shoote_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masterpiece"
                        android:textSize="13sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:id="@+id/ic_logo_apex"
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_dota_logo"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="13dp"
                        app:layout_constraintTop_toBottomOf="@id/apex_shoote_tx"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/apex_desc_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dota 2 is an RTS-styled MOBA-type \ncompetitive team game with RPG elements."
                        android:textSize="10sp"
                        android:textColor="@color/gray"
                        android:textStyle="normal"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/ic_logo_apex"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/apex_readMore_tx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read_more"
                        android:textSize="11sp"
                        android:textColor="@color/green_off"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/apex_desc_tx"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <Button
                        android:id="@+id/apex_playGame_btn"
                        android:layout_width="90dp"
                        android:layout_height="35dp"
                        android:text="@string/play_game"
                        android:textSize="8sp"
                        android:textColor="@color/green"
                        android:textAllCaps="false"
                        android:textStyle="normal"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintTop_toBottomOf="@id/apex_readMore_tx"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_light"
                        android:contentDescription="@string/volerant_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="160dp"
                        android:src="@drawable/ic_dota"
                        android:layout_marginEnd="15dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/volerant_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>




                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>